crates/ladder_types/tests/ui/generated/should_pass/test__typenum_ladder__R1_minus_R1.rs

use ladder_types::typenum_ladder::*;

fn main() {
   let _ = R1::new() - R1::new();
}
